--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "jwt-decode": "^3.1.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-loading-skeleton": "^3.1.0",
     "react-player": "^2.10.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
